v3/dev/raw-manifest/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev3.nemo.ai.kr
      secretName: dev-nemo-tls
  rules:
    - host: dev3.nemo.ai.kr
      http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /swagger-ui/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /v3/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /swagger-resources/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /ai/
            pathType: Prefix
            backend:
              service:
                name: ai
                port:
                  number: 8001
          - path: /_next/
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
